[package]
name = "bevy_ui_preferences"
version = "0.17.0-dev"
edition = "2024"
description = "Read system-level UI and accessibility preferences"
homepage = "https://bevy.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.17.0-dev", default-features = false }
bevy_color = { path = "../bevy_color", version = "0.17.0-dev", default-features = false }
bevy_platform = { path = "../bevy_platform", version = "0.17.0-dev", default-features = false }
bevy_ecs = { path = "../bevy_ecs", version = "0.17.0-dev", default-features = false }
bevy_tasks = { path = "../bevy_tasks", version = "0.17.0-dev", default-features = false }

# bevy optional
bevy_reflect = { path = "../bevy_reflect", version = "0.17.0-dev", default-features = false, optional = true }

# Other
mundy = { version = "0.2.0", default-features = false, features = ["async-io", "log"], optional = true }
crossbeam-channel = { version = "0.5.15" }
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }

[features]
default = ["std", "color-scheme", "contrast", "reduced-motion", "reduced-transparency", "accent-color", "double-click-interval"]

# Preferences

## Enable reading the user's color scheme preference.
color-scheme = ["mundy/color-scheme"]
## Enable reading the user's contrast preference.
contrast = ["mundy/contrast"]
## Enable reading the user's reduced motion preference.
reduced-motion = ["mundy/reduced-motion"]
## Enable reading the user's reduced transparency preference.
reduced-transparency = ["mundy/reduced-transparency"]
## Enable reading the system-wide accent color.
accent-color = ["mundy/accent-color"]
## Enable reading the system-wide double click interval.
double-click-interval = ["mundy/double-click-interval"]

# Other
serialize = ["serde", "bevy_color/serialize", "bevy_platform/serialize"]
std = ["serde/std", "bevy_color/std", "bevy_platform/std", "dep:mundy"]
bevy_reflect = ["dep:bevy_reflect", "bevy_app/bevy_reflect"]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
